# lib-ledger-core

./: .gitmodules  CMakeLists.txt
core/: CMakeLists.txt
core/lib/bigd/: bigdtypes.h
core/lib/soci_sqlite3/: session.cpp
core/src/database/: SQLite3Backend.cpp  migrations.cpp  migrations.hpp
core/src/wallet/common/: AbstractWallet.cpp  AbstractWallet.hpp
core/src/wallet/pool/: WalletPool.cpp
core/src/wallet/ripple/: RippleLikeAccount.cpp  RippleLikeAccount.h
core/test/: CMakeLists.txt
core/test/algorand/: AlgorandAccountTests.cpp  AlgorandDatabaseTests.cpp  CMakeLists.txt
core/test/coin-integration/common/: CoinIntegrationFixture.hpp
core/test/coin-integration/stellar/: create_stellar_account_tests.cpp  horizon_explorer_tests.cpp  transaction_tests.cpp
core/test/cosmos/: AccountTests.cpp  CMakeLists.txt  Fixtures.cpp  db_test.cpp
core/test/database/: BaseFixture.cpp  BaseFixture.h  database_soci_proxy_tests.cpp  pool_tests.cpp  query_builder_tests.cpp  sqlcipher_tests.cpp
core/test/fixtures/: bch_xpub_fixtures.h  btg_xpub_fixtures.h  coin_selection_xpub_fixtures.h  eth_xpub_fixtures.h  medium_xpub_fixtures.h  testnet_xpub_fixtures.h  xrp_fixtures.h  xtz_fixtures.h  zec_xpub_fixtures.h
core/test/fixtures/mocked_http/BCHMakeP2PKHTransaction.CreateStandardP2SHWithOneOutput/: http_cache_1607610503820381.txt  http_cache_1607610504019021.txt  http_cache_1607610504188675.txt
core/test/fixtures/mocked_http/BTGMakeP2SHTransaction.CreateStandardP2SHWithOneOutput/: http_cache_1608217414168184.txt  http_cache_1608217414336788.txt
core/test/fixtures/mocked_http/BitcoinLikeWalletP2SHSynchronization.EraseDataSinceAfterSynchronization/: http_cache_1607609104835636.txt
core/test/fixtures/mocked_http/BitcoinLikeWalletP2SHSynchronization.MediumXpubSynchronization/: http_cache_1607608695726230.txt  http_cache_1607608695877320.txt
core/test/fixtures/mocked_http/BitcoinLikeWalletP2SHSynchronization.SynchronizeFromLastBlock/: http_cache_1607608798363513.txt
core/test/fixtures/mocked_http/BitcoinLikeWalletP2SHSynchronization.SynchronizeOnceAtATime/: http_cache_1607608752802148.txt
core/test/fixtures/mocked_http/BitcoinLikeWalletP2SHSynchronization.TestNetSynchronization/: http_cache_1607609154268019.txt  http_cache_1607609154707683.txt
core/test/fixtures/mocked_http/BitcoinLikeWalletP2SHSynchronization2.EraseDataSinceAfterSynchronization/: http_cache_1607609105124258.txt
core/test/fixtures/mocked_http/BitcoinMakeP2PKHTransaction.CreateStandardP2PKHWithMultipleInputs/: http_cache_1607610297505105.txt  http_cache_1607610297902412.txt
core/test/fixtures/mocked_http/BitcoinMakeP2PKHTransaction.CreateStandardP2PKHWithOneOutput/: http_cache_1607610138266512.txt  (+2 more)
core/test/integration/: BaseFixture.cpp  BaseFixture.h  CMakeLists.txt  WalletFixture.hpp  account_blockchain_observation.cpp  account_creation_tests.cpp  account_info_test.cpp  accounts_public_interfaces_test.cpp  dispatcher_stop_test.cpp  ledger_api_blockchain_explorer_tests.cpp  pool_tests.cpp  wallet_database_tests.cpp  wallet_tests.cpp
core/test/integration/database/: AlgorandDatabaseTests.cpp  cosmos_db_tests.cpp  cosmos_db_tests2.cpp
core/test/integration/explorer/: horizon_explorer_tests.cpp
core/test/integration/keychains/: ethereum_keychain_test.cpp  ethereum_keychain_test2.cpp  keychain_test_helper.h  ripple_keychain_test.cpp
core/test/integration/synchronization/: algorand_synchronization.cpp  cosmos_synchronization.cpp  cosmos_synchronization2.cpp  cosmos_synchronization3.cpp  cosmos_synchronization4.cpp  cosmos_synchronization5.cpp  cosmos_synchronization6.cpp  cosmos_synchronization_benchmarks.cpp  ethereum_synchronization.cpp  ethereum_synchronization2.cpp  ripple_synchronization.cpp  ripple_synchronization2.cpp  synchronization_P2SH_tests.cpp  synchronization_P2SH_tests2.cpp  synchronization_btc_rbf_tests.cpp  synchronization_stellar_test3.cpp  synchronization_stellar_tests.cpp  synchronization_stellar_tests2.cpp  synchronization_tests.cpp  tezos_synchronization.cpp  tezos_synchronization2.cpp
core/test/integration/transactions/: bitcoin_P2PKH_transaction_tests.cpp  bitcoin_P2PKH_transactions_tests2.cpp  bitcoin_P2SH_transaction_tests.cpp  bitcoin_P2WPKH_transaction_tests.cpp  bitcoin_P2WSH_transaction_tests.cpp  coin_selection_P2PKH.cpp  ethereum_transaction_tests.cpp  ethereum_transactions_test2.cpp  optimisticupdate_xrp_tests.cpp  ripple_transaction_tests.cpp  stellar_transaction_tests.cpp  tezos_transaction_tests.cpp  transaction_test_helper.h
core/test/lib/cpp-httplib/: httplib.h
core/test/lib/libledger-test/: CMakeLists.txt
core/test/net/: http_client_tests.cpp
core/test/preferences/: preferences_test.cpp
ledger-core-stellar/src/: CMakeLists.txt
ledger-core-stellar/src/stellar/: StellarLikeAccount.cpp  StellarLikeAddress.cpp  StellarLikeCurrencies.cpp  StellarLikeMemo.cpp  StellarLikeOperation.cpp  StellarLikeOperationQuery.cpp  StellarLikeWallet.cpp  stellar.cpp  stellarNetworks.cpp
ledger-core-stellar/src/stellar/database/: Migrations.cpp  StellarLikeAccountDatabaseHelper.cpp  StellarLikeAssetDatabaseHelper.cpp  StellarLikeLedgerDatabaseHelper.cpp  StellarLikeTransactionDatabaseHelper.cpp
ledger-core-stellar/src/stellar/explorers/: HorizonBlockchainExplorer.cpp
ledger-core-stellar/src/stellar/factories/: StellarLikeKeychainFactory.cpp  StellarLikeWalletFactory.cpp
ledger-core-stellar/src/stellar/keychains/: DefaultStellarLikeKeychain.cpp  StellarLikeKeychain.cpp
ledger-core-stellar/src/stellar/synchronizers/: StellarLikeBlockchainExplorerAccountSynchronizer.cpp
ledger-core-stellar/src/stellar/transaction_builders/: StellarLikeTransaction.cpp  StellarLikeTransactionBuilder.cpp
ledger-core-stellar/src/stellar/xdr/: StellarModelUtils.cpp  XDRDecoder.cpp  XDREncoder.cpp  models.cpp
ledger-core-stellar/test/: CMakeLists.txt  StellarFixture.cpp  StellarFixture.hpp  address_tests.cpp  create_stellar_account_tests.cpp  get_memo_tests.cpp  horizon_explorer_tests.cpp  main.cpp  synchronization_tests.cpp  transaction_tests.cpp  xdr_tests.cpp
(+231 files in other folders)
